2007-02-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (The Top Node): no @insertcopying recommended,
	per rms.

2007-02-21  Karl Berry  <karl@gnu.org>

	* system.h: simplify system header inclusion, following current
	practice; that is, copied from GNU Hello.

	* makeinfo/test/no-headers (nulldev): just always use /dev/null.
	Also from Brian.

	* system.h (strcase.h) [!HAVE_STRCASECMP...]: remove this
	inclusion entirely, apparently with gnulib string.h suffices.
	Report from Brian Dessent, 31 Oct 2006 15:50:34.

2007-02-21  Brian Dessent  <brian@dessent.net>

	* info/info.c,
	* info/infokey.c,
	* info/makedoc.c,
	* util/texindex.c (program_name): declare as non-static, for
	non-glibc, e.g., Cygwin.  bug-texinfo mail from 31 Oct 2006 15:50:34.

2007-02-14  Miloslav Trmac  <mitr@redhat.com>

	* makeinfo/makeinfo.c (getdocumenttext): Correctly save and
	restore the current locale configuration.
	bug-texinfo mail of 14 Feb 2007 16:28:37 +0100.

2007-02-11  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Link Basics): manual is metasyntactic.

	* doc/texinfo.txi (documentencoding, documentlanguage):
	mention the UTF-8 is (sort of) supported, and that these commands
	should be given after @setfilename.

	* doc/texinfo.tex (\pdfmkdest): \makevalueexpandable,
	so simple @value in @node names can work.
	Report from Jorge Barros de Abreu, 14 Jan 2007 08:24:57 (+ff).

2007-02-10  gettextize  <bug-gnu-gettext@gnu.org>

	* gnulib/m4/gettext.m4: Upgrade to gettext-0.16.
	* gnulib/m4/lib-link.m4: Upgrade to gettext-0.16.
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.16.

2007-02-07  Miloslav Trmac  <mitr@redhat.com>

	* configure.ac: Remove unnecessary wcwidth () test.  Add missing
	setlocale () test.
	* makeinfo/makeinfo.c (string_width): Remove.
	* makeinfo/makeinfo.h (string_width): Remove declaration.

	* makeinfo/cmds.c (cm_center)
	* makeinfo/index.c (insert_index_output_line_no, cm_printindex):
	* makeinfo/makeinfo.c (do_flush_right_indentation)